--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
-.gradle
+################
+#  General
+################
+*.log
+*.zip
+*.tar
+*.gz
+*.rar
+
+################
+#  Java
+################
+*.class
+*.jar
+*.war
+*.ear
+
+################
+#  Eclipse
+################
+bin
+
+################
+#  Gradle
+################
+/.gradle/
 /build/
-
-# Ignore Gradle GUI config
 gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-
-# Cache of project
 .gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+gradle/wrapper/gradle-wrapper.properties
