--- a/ejb/build.gradle
+++ b/ejb/build.gradle
@@ -3,5 +3,6 @@ plugins {
 }
 
 dependencies {
-    api 'javax.ejb:javax.ejb-api:3.2.2'
+    compileOnlyApi 'javax.ejb:javax.ejb-api:3.2.2'
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 }
